Resolve #2 - Page for Adding New Habit

--- a/i18n/en/translation.json
+++ b/i18n/en/translation.json
@@ -1,3 +1,19 @@
 {
-  "title": "Edit app/index.tsx to edit this screen."
+  "index": {
+    "title": "Habits+"
+  },
+  "add": {
+    "title": "New Habit",
+    "titleInput": {
+      "label": "Title",
+      "placeholder": "max. 50 characters"
+    },
+    "descriptionInput": {
+      "label": "Description",
+      "placeholder": "max. 100 characters"
+    },
+    "iconsGrid": {
+      "title": "Icon"
+    }
+  }
 }
